prost-canonical-serde/tests/ui/unsupported_rename_all_fields.stderr
error: unsupported serde container attribute `rename_all_fields`
 --> tests/ui/unsupported_rename_all_fields.rs:4:9
  |
4 | #[serde(rename_all_fields = "snake_case")]
  |         ^^^^^^^^^^^^^^^^^
